Solve the problem with #owner-switcher clipping border of #owner-name.

--- a/src/ui/mainmenu/owner/OwnerName.css
+++ b/src/ui/mainmenu/owner/OwnerName.css
@@ -1,4 +1,5 @@
 #owner-name {
+    display: inline-block;
     border: var(--dark) .1rem solid;
     border-radius: .25rem;
     text-decoration: none;
